<resources>

    <string name="app_name">Student Echo</string>
    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
    <string name="title_activity_instructors">StudentEcho: Instructors</string>
    <string name="title_activity_courses">StudentEcho: Courses</string>
    <string name="find_reviews_by">Find Reviews By</string>
    <string name="instructor">Instructor</string>
    <string name="instructors">Instructors</string>
    <string name="add_instructor">Add Instructor</string>
    <string name="course">Course</string>
    <string name="courses">Courses</string>
    <string name="add_course">Add Course</string>
    <string name="find_course">Find Course</string>
    <string name="title_activity_login">StudentEcho: Login</string>
    <string name="title_activity_signup">StudentEcho: Sign-Up</string>
    <string name="edit_review">Edit review</string>
    <string name="delete_review">Delete review</string>
    <string name="comment_hint">Enter your review comment here...</string>
    <string name="overall_rating_label">Overall Rating</string>
    <string name="difficulty_rating_label">Difficulty Rating</string>
    <string name="save_changes">Save Changes</string>
    <string name="title_activity_klogin">k_login</string>
    <string name="delete_user">Delete user\n</string>

</resources>
