<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="comp3350.student_echo.presentation.HomeActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="96sp"
        android:text="@string/find_reviews_by"
        android:textAlignment="center"
        android:textSize="48sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/buttonCourse"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonCourseOnClick"
            android:text="@string/course" />

        <Button
            android:id="@+id/buttonInstructor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:onClick="buttonInstructorOnClick"
            android:text="@string/instructor" />

    </LinearLayout>

</RelativeLayout>
